--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <script src="script.js" defer></script>
     </head>
     <body>
-        <h1>BIRTHDAY</h1>
+        <h1>Day Left</h1>
 
         <div class="countdown-container">
             <div class="countdown-el days-c">
